src/test/deca/context/invalid/resultats/test15_undefined-ima.res
  IMA -- Fichier ./src/test/deca/context/invalid/test15_undefined.ass introuvable
